fix spacing around price and + icon animation

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -183,6 +183,10 @@
   font-size: calc(var(--font-heading-scale) * 1.2rem);
 }
 
+.card--horizontal .card-information > *:not(.visually-hidden:first-child) + *:not(.rating) {
+  margin-top: 0;
+}
+
 .card--horizontal__quick-add:before {
   box-shadow: none;
 }
