--- a/assets/component-complementary-products.css
+++ b/assets/component-complementary-products.css
@@ -128,6 +128,10 @@ product-recommendations.is-accordion + .accordion {
   width: 1.2rem;
 }
 
+.complementary-products__container .icon-wrap {
+  display: flex;
+}
+
 .complementary-products__container .quick-add__submit:not(.animate-arrow) .icon-wrap {
   transition: transform var(--duration-short) ease;
 }
